--- a/style.css
+++ b/style.css
@@ -28,26 +28,52 @@ a {
   color: #000;
 }
 
+.custom-description {
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 .custom-page {
   width: 60vw;
   height: 100vh;
   align-items: center;
 }
 
-button {
+.about {
+  margin: 10px 0 10px;
+  border-top: 1px solid #00000031;
+  border-bottom: 1px solid #00000031;
+}
+
+a {
   width: 100px;
   height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   font-family: 'Nanum Gothic', sans-serif;
   border: 1px solid #000;
   border-radius: 5px;
   background-color: #fff;
   color: #000;
+  transition: all .3s linear;
+}
+
+a:hover {
+  transform: scale(1.1);
+  background-color: #000;
+  color: #fff;
 }
 
 @media (min-width: 320px) and (max-width: 768px) {
   .custom {
     margin-top: 200px !important;
     margin-bottom: 20px !important;
+  }
+
+  .custom-description {
+    margin-bottom: 50px;
   }
 
 }
