--- a/websites/coffee-road/style.css
+++ b/websites/coffee-road/style.css
@@ -98,3 +98,19 @@ p {
   background-color: #fff;
   color: #000;
 }
+
+@media (min-width: 320px) and (max-width: 768px) {
+  .custom-button {
+    width: 1.4em;
+    height: 1.4em;
+    background-color: #ffffff8f;
+    color: #000;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .fa-2x {
+    font-size: 1em;
+  }
+
+}
