--- a/websites/duzce-tentacion/style.css
+++ b/websites/duzce-tentacion/style.css
@@ -55,3 +55,27 @@ p {
   background-color: #fff;
   color: #000;
 }
+
+@media (min-width: 320px) and (max-width: 768px) {
+  h1 {
+    font-size: 2.8rem;
+  }
+
+  p {
+    font-size: 1.5rem;
+  }
+
+  .custom-button {
+    width: 1.4em;
+    height: 1.4em;
+    background-color: #ffffff8f;
+    color: #000;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .fa-2x {
+    font-size: 1em;
+  }
+
+}
