--- a/websites/travelers/style.css
+++ b/websites/travelers/style.css
@@ -101,13 +101,6 @@ h2 {
   margin-bottom: 10px;
 }
 
-/* Height for devices larger than 576px */
-@media (min-width: 992px) {
-  #introCarousel {
-    margin-top: -58.59px;
-  }
-}
-
 .navbar .nav-link {
   color: #fff !important;
 }
@@ -116,4 +109,27 @@ h2 {
   width: auto;
   background-color: #fff;
   color: #000;
+}
+
+/* Height for devices larger than 576px */
+@media (min-width: 992px) {
+  #introCarousel {
+    margin-top: -58.59px;
+  }
+}
+
+@media (min-width: 320px) and (max-width: 768px) {
+  .custom-button {
+    width: 1.4em;
+    height: 1.4em;
+    background-color: #ffffff8f;
+    color: #000;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .fa-2x {
+    font-size: 1em;
+  }
+
 }
