--- a/websites/travelers/style.css
+++ b/websites/travelers/style.css
@@ -1,135 +1,115 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Condensed:wght@300&display=swap');
 
-/* Carousel styling */
-#introCarousel,
-.carousel-inner,
-.carousel-item,
-.carousel-item.active {
+body {
+  box-sizing: border-box;
+  margin: 0;
+}
+
+.main-picture {
   height: 100vh;
-}
-.custom-buttom-carousel {
-  width: 0;
-  height: 0;
-}
-
-h4,
-p,
-div .user-name {
-  color: #000;
+  width: 100%;
+  background: linear-gradient(rgba(0, 0, 0, 0.445), rgba(0, 0, 0, 0.445)), url('./images/thermals-0.jpeg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
 }
 
-.custom-image {
-  background-color: rgba(0, 0, 0, 0.6);
+.custom-main-description,
+.main-section,
+.display-image {
+  display: flex;
 }
 
-h1,
-h2 {
+.custom-main-description {
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+}
+
+h1 {
   font-family: 'Open Sans', sans-serif;
   font-style: italic;
+  font-size: 40px;
+  color: #fff;
 }
 
-.carousel-item:nth-child(1) {
-  background-image: url('./images/termals-0.jpeg');
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center center;
+.main-section {
+  margin: 40px 30px;
 }
 
-.carousel-item:nth-child(2) {
-  background-image: url('./images/termals-1.jpeg');
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center center;
+.display-image {
+  width: 100%;
+  justify-content: space-evenly;
 }
 
-.carousel-item:nth-child(3) {
-  background-image: url('./images/termals-2.jpeg');
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center center;
+.description {
+  width: 40vw;
 }
 
-/* Custom Navbar & Username */
-.custom-navbar {
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
-  background-color: #fff;
+.custom-profile-picture {
+  width: 45vw;
+  border-radius: 10px;
+  box-shadow: 0 2px 10px 0 rgba(0,0,0,.21);
 }
 
-.custom-nav {
-  justify-content: flex-start !important;
+.description h4 {
+  font-family: 'Fjalla One', sans-serif;
+  font-size: 30px;
 }
 
-.user-name {
-  margin-left: 0 !important;
-  font-family: 'Open Sans', sans-serif;
-  font-size: 0.9rem;
-  font-weight: bold;
-}
-
-.custom-avatar {
-  margin-right: 5px;
-}
-
-.custom-image {
-  border-top-left-radius: 0 !important;
-  border-top-right-radius: 0 !important;
-}
-
-.custom-description {
-  flex-direction: column;
-}
-
-.custom-row-description {
-  margin-bottom: 5px;
-  align-items: flex-start;
-  justify-content: flex-start;
-}
-
-.custom-heart {
-  margin-right: 10px;
-}
-
-.custom-place-description,
-.custom-card-content {
+.description p {
+  font-size: 20px;
+  font-family: 'IBM Plex Sans Condensed', sans-serif;
+  word-spacing: 0.5px;
+  letter-spacing: 0.5px;
   text-align: justify;
-  text-justify: inter-word;
 }
 
-.custom-card-content {
-  margin-top: 5px;
-  margin-bottom: 10px;
+.lastest-posts {
+  display: flex;
+  justify-content: space-around;
 }
 
-.navbar .nav-link {
-  color: #fff !important;
+.post {
+  width: 25vw;
+  border: 1px solid lightgray;
+  border-radius: 10px;
 }
 
-.custom-button {
-  width: auto;
-  background-color: #fff;
-  color: #000;
+.post-header {
+  display: flex;
+  margin-bottom: 5px;
+  align-items: center;
 }
 
-/* Height for devices larger than 576px */
-@media (min-width: 992px) {
-  #introCarousel {
-    margin-top: -58.59px;
-  }
+.profile-picture img {
+  margin-right: 5px;
+  height: 30px;
+  border-radius: 15px;
 }
 
-@media (min-width: 320px) and (max-width: 768px) {
-  .custom-button {
-    width: 1.4em;
-    height: 1.4em;
-    background-color: #ffffff8f;
-    color: #000;
-    justify-content: center;
-    align-items: center;
-  }
+.post-image img {
+  width: 20vw;
+}
 
-  .fa-2x {
-    font-size: 1em;
-  }
+a {
+  font-family: 'IBM Plex Sans Condensed', sans-serif;
+  font-weight: 900;
+  text-decoration: none;
+  color: #000000;
+}
 
+.post-footer p {
+  font-family: 'IBM Plex Sans Condensed', sans-serif;
+  margin: 5px 0;
+}
+
+.profile-picture img,
+.user-name a,
+.post-footer .reaction,
+.post-footer a,
+.post-footer p {
+  margin: 5px 5px;
 }
