--- a/websites/coffee-road/style.css
+++ b/websites/coffee-road/style.css
@@ -1,116 +1,270 @@
-@import url(
-  'https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@1,600&display=swap'
-);
-@import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@800&display=swap');
 
-.header-background {
-  background-image: url('./images/coffeeandlandscape/coffee-plant.jpeg');
-  height: 100vh;
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
-.header-mask {
-  background-color: rgba(24, 82, 36, 0.404);
-}
-
-.custom-navbar {
-  width: 100%;
-  justify-content: space-evenly;
-}
-
-.custom-ul {
-  width: 60%;
-  padding-left: unset;
-  justify-content: space-evenly;
-}
-
-.custom-navbar-toggler {
-  color: #791503;
-}
-
-.nav-item a {
-  color: #791503;
-  text-transform: uppercase;
-  font-weight: 800;
-}
-
-h1, h4 {
-  color: #ffffff;
-  font-family: 'Cormorant Garamond', serif;
-  font-weight: 900;
-}
-
-.custom-welcome {
-  height: 50vh;
-}
-
-main {
-  margin-top: 20px;
-}
-
-h2 {
-  color: #791503;
-  font-family: 'Cormorant Garamond', serif;
-}
-
-p {
-  font-family: 'Cormorant Garamond', serif;
-  font-weight: 800;
-  color: #000000;
-}
-
-.custom-state {
-  margin: 20px;
-  text-align: justify;
-  text-justify: inter-word;
-}
-
-.custom-image {
-  height: 200px;
-}
-
-.custom-image img {
-  border-radius: 20px;
-  box-shadow: 8px 5px 5px #7915031c;
-  overflow: hidden;
-}
-
-.custom-background {
-  background-image: url('./images/coffeeandlandscape/buenavista-quindio-san-alberto.jpeg');
+.header-display {
+  background: linear-gradient(
+    rgba(255, 255, 255, 0.664), 
+    rgba(255, 255, 255)
+    ), url("./images/coffeeandlandscape/coffee-plant.jpeg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
 }
 
-.custom-footer {
-  background-color: #f1f1f1;
+.nav-links li a {
+  display: flex;
+  color: #034919;
 }
 
-.custom-footer a, .custom-footer-two p {
-  color: #ffffff;
+ul {
+  width: 100%;
+  height: 50px;
+  display: flex;
+  padding: 0;
+  justify-content: space-evenly;
+  align-items: center;
+  background-color: rgb(255, 255, 255, 0.1);
 }
 
-.custom-footer-two {
-  background-color: rgba(0, 0, 0, 0.2);
+li {
+  list-style-type: none;
+  text-transform: uppercase;
 }
 
-.custom-button {
-  width: auto;
-  background-color: #fff;
-  color: #000;
+li a {
+  color: #fff;
+  font-weight: 600;
+  text-decoration: none;
+  font-size: 15px;
+  transition: font-size .2s linear, color .2s linear;
 }
 
-@media (min-width: 320px) and (max-width: 768px) {
-  .custom-button {
-    width: 1.4em;
-    height: 1.4em;
-    background-color: #ffffff8f;
-    color: #000;
-    justify-content: center;
+li a:hover {
+  font-size: 20px;
+  color: #8a1f0d;
+}
+
+.burger {
+  display: none;
+  padding: 0.5rem;
+  cursor: pointer;
+}
+
+.line {
+  height: 2px;
+  width: 35px;
+  margin: 0.5rem 0;
+  background: #034919;
+  transition: transform 0.75s ease, opacity 0.75s ease;
+}
+
+.main-nav.show .line1 {
+  transform: translate(-10px) rotate(45deg) translate(15px);
+}
+
+.main-nav.show .line2 {
+  opacity: 0;
+}
+
+.main-nav.show .line3 {
+  transform: translate(-10px) rotate(-45deg) translate(15px);
+}
+
+.main-nav.show .nav-links {
+  transform: translateX(0%);
+}
+
+.welcome {
+  height: 100vh;
+  font-family: 'Playfair Display', serif;
+  font-size: 35px;
+  color: #791503;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center; 
+}
+
+.welcome h2 {
+  margin-top: 50px;
+}
+
+.gradient {
+  background: linear-gradient(transparent, #ccdacf, #abccb1)
+}
+
+.caldas, .risaralda, .quindio {
+  padding: 30px;
+}
+
+.aboutCurrentCity {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+h2 {
+  font-family: 'Playfair Display', serif;
+  font-size: 30px;
+  text-align: center;
+  color: #692A0C;
+  margin: 10px;
+}
+
+p {
+  font-size: 20px;
+  text-align: justify;
+  text-justify: inter-word;
+}
+
+article img {
+  width: 50vw;
+  border-radius: 15px;
+}
+
+article p {
+  width: 40vw;
+}
+
+footer {
+  height: 120vh;
+  background: linear-gradient(
+    rgba(255 255 255 / 12%), 
+    rgba(255 255 255 / 23%)
+    ), url("./images/coffeeandlandscape/buenavista-quindio-san-alberto.jpeg");
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.container {
+  padding: 10px;
+  border-radius: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-family: 'Playfair Display', serif;
+  font-size: 30px;
+  font-weight: 800;
+  color: #fff;
+  background-color: #3b5941d4;
+}
+
+footer a {
+  text-decoration: none;
+  color: #fff;
+}
+
+@media (min-width: 320px) and (max-width: 480px) {
+  .welcome h1 {
+    font-size: 30px;
+    width: 65vw;
+    text-align: center;
+  }
+
+  .welcome h2 {
+    font-size: 16px;
+    width: 50vw;
+    text-align: center;
+  }
+}
+
+@media screen and (max-width: 720px) {
+  .gradient h2 {
+    margin: 0 0 10px 0;
+    font-size: 25px;
+    text-align: center;
+  }
+  
+  .aboutCurrentCity {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .aboutCurrentCity img {
+    width: 80vw;
+    margin-bottom: 20px;
+  }
+
+  .aboutCurrentCity p {
+    width: 80vw;
+    font-size: 1rem;
+  }
+
+  p:nth-child(1) {
+    margin-bottom: 25px;
+  }
+
+  .container {
+    width: 80vw;
+  }
+
+  footer a,
+  footer p {
+    font-size: 1rem;
+  }
+
+  .nav-links li a {
+    font-size: 1rem;
+  }
+}
+
+@media (min-width: 720px) and (max-width: 829px) {
+  h1 {
+    font-size: 2.5rem;
+  }
+  
+  h2 {
+    font-size: 1.9rem;
+  }
+
+  .nav-links li a {
+    font-size: 1.2rem;
+  }
+}
+
+@media screen and (max-width: 830px) {
+  .nav-links {
+    width: 60%;
+  }
+
+  .nav-links li a {
+    color: #fff;
+  }
+
+  .burger {
+    display: block;
+    position: fixed;
+  }
+
+  .nav-links {
+    position: fixed;
+    top: 0vh;
+    right: 0;
+    height: 100vh;
+    width: 50%;
+    flex-direction: column;
     align-items: center;
+    justify-content: space-evenly;
+    background: #237734;
+    transform: translateX(100%);
+    transition: transform 1s ease;
+    box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.5);
   }
-
-  .fa-2x {
-    font-size: 1em;
+  
+  .main-nav {
+    display: flex;
+    justify-content: flex-end;
   }
-
 }
