--- a/style.css
+++ b/style.css
@@ -152,7 +152,7 @@ h1 a {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  background-color: rgba(110, 0, 0, 0.555);
+  background-color: #70ccd8;
   border-radius: 100px;
 }
 
