Modify media queries and portfolio hyper link

--- a/style.css
+++ b/style.css
@@ -91,25 +91,32 @@ article {
   background-color: #fff;
 }
 
-.portfolio {
-  text-align: center;
-}
-
 .portfolio a {
+  text-align: center;
   color: #005d00;
+  text-decoration: none;
 }
 
 .active {
   animation: transitionPortfolio 1s;
 }
 
-h1 a {
+h1 {
   font-size: 5rem;
   text-transform: uppercase;
-  text-decoration: none;
   width: 100vw;
   font-family: 'Titan One', cursive;
   letter-spacing: 6rem;
+  transition: all .8s ease-in-out;
+}
+
+h1:hover {
+  transform: scale(1.5);
+}
+
+.portfolio p {
+  font-family: 'Nanum Gothic', sans-serif;
+  font-size: 1.5rem;
 }
 
 .technologies {
@@ -220,7 +227,11 @@ h1 a {
   }
 }
 
-@media (min-width: 320px) and (max-width: 780px) {
+@media (min-width: 318px) and (max-width: 780px) {
+  .main-header {
+    margin-top: 20px;
+  }
+  
   .header-distribution {
     flex-direction: column;
   }
@@ -230,27 +241,31 @@ h1 a {
   }
 
   .description h2 {
-    font-size: 1.8rem;
+    font-size: 1.5rem;
   }
 
   .logo {
     font-size: 2rem;
   }
 
-  h1 a {
-    font-size: 2rem;
-    letter-spacing: 1rem;
+  h1 {
+    font-size: 1.8rem;
+    letter-spacing: .8rem;
+  }
+
+  .portfolio p {
+    font-size: .74rem;
   }
 
   .description article p {
     width: 100%;
-    font-size: 1.4rem;
+    font-size: 1rem;
   }
 
   .my-description {
     width: 70vw;
     height: 40vh;
-    font-size: 1.4rem;
+    font-size: 1rem;
   }
 
   .technology i {
@@ -258,7 +273,7 @@ h1 a {
   }
 
   .work h2 {
-    font-size: 2.4rem;
+    font-size: 2rem;
   }
 
   .work-experience {
@@ -273,7 +288,7 @@ h1 a {
   }
 
   .job-description h3 {
-    font-size: 1.4rem;
+    font-size: 1.1rem;
   }
 
   .job-description p {
@@ -321,7 +336,7 @@ h1 a {
     font-size: 1.8rem;
   }
 
-  h1 a {
+  h1 {
     font-size: 5rem;
     letter-spacing: 1rem;
   }
