--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ article {
 
 .description h2 {
   font-family: 'Abril Fatface', cursive;
-  font-size: 2.5rem;
+  font-size: 2.9rem;
 }
 
 .description article p {
@@ -67,7 +67,7 @@ article {
 
 .logo {
   text-align: center;
-  font-size: 3rem;
+  font-size: 4rem;
 }
 
 .main-description {
@@ -106,7 +106,7 @@ h1 {
   text-transform: uppercase;
   width: 100vw;
   font-family: 'Titan One', cursive;
-  letter-spacing: 6rem;
+  letter-spacing: 3rem;
   transition: all .8s ease-in-out;
 }
 
@@ -236,10 +236,6 @@ h1:hover {
     flex-direction: column;
   }
 
-  .my-image img {
-    width: 30vw;
-  }
-
   .description h2 {
     font-size: 1.5rem;
   }
@@ -248,9 +244,17 @@ h1:hover {
     font-size: 2rem;
   }
 
+  .logo a i:hover {
+    color: #008000;
+  }
+
   h1 {
     font-size: 1.8rem;
     letter-spacing: .8rem;
+  }
+
+  h1:hover {
+    transform: scale(1);
   }
 
   .portfolio p {
@@ -323,7 +327,7 @@ h1:hover {
   }
 
   .my-image img {
-    width: 30vw;
+    width: 18vw;
   }
 
   .description article p {
@@ -337,8 +341,8 @@ h1:hover {
   }
 
   h1 {
-    font-size: 5rem;
-    letter-spacing: 1rem;
+    font-size: 3rem;
+    letter-spacing: .5rem;
   }
 
   .work-experience {
