--- a/style.css
+++ b/style.css
@@ -1,216 +1,521 @@
-@import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Titan+One&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Rozha+One&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Caprasimo&family=Julius+Sans+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lexend+Peta:wght@100&display=swap');
 
 * {
   box-sizing: border-box;
 }
 
 body {
-  margin: 0 0;
+  margin: 0;
 }
 
-.main-header {
-  margin-top: 5rem;
+/* Hero */
+
+.hero {
+  width: 100vw;
+  height: 100vh;
   display: flex;
   justify-content: center;
-}
-
-.header-distribution {
-  width: 70vw;
-  height: 25rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
   align-items: center;
 }
 
-.my-image img {
-  width: 25vw;
-  height: auto;
-  border-radius: 8rem;
-  animation: transitionLeft 1s;
+.hero, .content-work, .about, .contact {
+  background-color: #eae4d9;
 }
 
-.description {
-  text-align: center;
-  animation: transitionRight 1s;
-}
-
-article {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  height: 100%;
-}
-
-.description h1 {
-  font-family: 'Abril Fatface', cursive;
-  font-size: 1.5rem;
-}
-
-.description article p {
+.content {
   width: 100%;
-  margin: 0 0;
-  font-family: 'Great Vibes', cursive;
-  font-size: 1.5rem;
-}
-
-.social-networks {
-  width: 100vw;
-  height: 15rem;
+  height: 100vh;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
+  flex-direction: column-reverse;
   align-items: center;
-  animation: transitionButton 1s;
+  color: #C89175;
+  background-color: #000;
+  padding: 60px;
+  animation: transitionButton 2.3s;
 }
 
-.logo {
-  font-size: 2rem;
-  text-align: center;
-}
-
-.logo a i:hover {
-  color: #008000;
-}
-
-.main-description {
-  width: 100vw;
-  height: 70vh;
+.about-me {
+  width: 100%;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  justify-content: flex-end;
+  text-align: center;
+  animation: textOpacity 2.3s;
+  animation-delay: 1.8s;
+}
+
+.brief a {
+  display: inline-block;
+  color: #C89175;
+  text-underline-offset: 4px;
+}
+
+.about-me a, p, h1, h2, .job-description h3, h4, p, .about-me a, h1, h2, .job-description h3 h4 p {
+  font-family: 'Roboto Condensed', sans-serif;
+  font-size: 1.1rem;
+  line-height: 1.4;
+}
+
+.my-info {
+  display: flex;
+  flex-direction: column;
   align-items: center;
-  background-color: #70ccd8;
 }
 
-.my-description {
-  width: 70vw;
-  height: 40vh;
-  display: flex;
-  justify-content: center;
-  font-size: 1rem;
-  border: 1px solid #70ccd8;
-  border-radius: 34px;
-  padding: 0 45px 0 45px;
-  background-color: #fff;
+.set-visibility {
+  visibility: hidden;
 }
 
-.portfolio a {
-  text-align: center;
-  color: #005d00;
+.my-info a {
+  margin: 0 20px;
+  display: inline-block;
   text-decoration: none;
-}
-
-.active {
-  animation: transitionPortfolio 1s;
-}
-
-h2 {
-  font-size: 1.8rem;
+  font-size: 2.5rem;
+  line-height: 3.5rem;
+  color: #C89175;
+  font-family: 'Lexend Peta', sans-serif;
   text-transform: uppercase;
-  width: 100vw;
-  font-family: 'Titan One', cursive;
-  letter-spacing: .5rem;
-  transition: all .8s ease-in-out;
 }
 
-.portfolio p {
-  font-family: 'Nanum Gothic', sans-serif;
-  font-size: .74rem;
+.my-info a:nth-child(1) {
+  animation: transitionTop 1.8s;
+  animation-delay: 2s;
 }
 
-.technologies {
-  width: 100vw;
-  height: 50vh;
-  margin-bottom: 3rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  align-items: center;
+.my-info a:nth-child(2) {
+  animation: transitionTop 1.8s;
+  animation-delay: 2.1s;
 }
 
-.technology {
+.my-info a:nth-child(3) {
+  animation: transitionTop 1.8s;
+  animation-delay: 2.2s;
+}
+
+.my-info a:nth-child(4) {
+  animation: transitionTop 1.8s;
+  animation-delay: 2.3s;
+}
+
+/* Work */
+
+.content-work, .about {
   width: 100%;
-  display: flex;
-  justify-content: space-evenly;
-}
-
-.technology i {
-  font-size: 5rem;
-  color: mediumpurple;
-}
-
-.work {
-  margin-bottom: 3rem;
+  padding: 30px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-evenly;
 }
 
-.work h1 {
+.title h2 {
+  font-family: 'Lexend Peta', sans-serif;
+  text-transform: uppercase;
+  font-size: 2.6rem;
+  letter-spacing: 1rem;
   text-align: center;
-  font-family: 'Rozha One', serif;
-  font-size: 2rem;
-  color: #424242;
 }
 
-.work-experience {
+.content-work .title h2 {
+  margin-bottom: 30px;
+}
+
+.crazy-stream, .moove-it-qubika, .content-about {
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
   align-items: center;
 }
 
-.job {
-  width: 80vw;
-  margin-top: 2rem;
-  margin-bottom: 2rem;
+.asset {
+  height: 450px;
+  width: 100vw;
   display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
+  justify-content: center;
   align-items: center;
+  background-color: #000;
+}
+
+.asset-frame-left {
+  height: 250px;
+  width: 250px;
+  position: relative;
+  top: -40px;
+  left: 30px;
+  display: flex;
+  justify-content: center;
+  background-color: #C89175;
+}
+
+.asset-frame-left img {
+  position: relative;
+  bottom: -70px;
+  left: -50px;
+  width: 250px;
+  height: 250px;
+  aspect-ratio: auto;
+}
+
+.asset-frame-right {
+  height: 250px;
+  width: 250px;
+  position: relative;
+  top: -25px;
+  left: -25px;
+  display: flex;
+  justify-content: center;
+  background-color: #C89175;
+}
+
+.asset-frame-right img {
+  position: relative;
+  bottom: -60px;
+  left: 50px;
+  width: 250px;
+  height: 250px;
+  aspect-ratio: auto;
 }
 
 .job-description {
+  color: #000;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  margin: 20px;
+}
+
+.job-description h3, h4, p {
   text-align: center;
+  margin: 10px;
+}
+
+.job-description h4 a {
+  color: #000;
+  text-underline-offset: 8px;
+}
+
+/* About */
+
+.about {
+  width: 100%;
+  height: 100vh;
+  min-height: 812px;
+}
+
+.content-about .title h2 {
+  margin: 40px 0;
+}
+
+.about-description {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
+
+.angeles-asset {
+  padding: 10px 0;
+  border: 30px solid #C89175;
+  background-color: #000;
+  display: flex;
+  justify-content: center;
+}
+
+.angeles-asset figure img {
+  width: 200px;
+  height: auto;
+  aspect-ratio: auto;
+  border: 20px solid #000;
+}
+
+.angeles-description {
+  margin: 40px 0;
+  display: flex;
   align-items: center;
 }
 
-.company-logo img {
-  width: 10rem;
-  height: 10rem;
-  transition: all 1s ease;
-  border-radius: 80px;
-  margin-top: 10px;
+.angeles-description p span {
+  display: block;
 }
 
-.company-logo img:hover {
-  transform: scale(1.5);
+.active-right {
+  animation: transitionRight 1s;
 }
 
-.job-description h4 {
-  font-family: 'Abril Fatface', cursive;
-  font-size: 1.1rem;
+.active-left {
+  animation: transitionLeft 1s;
 }
 
-.job-description p {
-  font-family: 'Nanum Gothic', sans-serif;
-  font-size: .9rem;
-  width: 80%;
-}
+/* Contact */
 
-.about-job {
+.content-contact {
   width: 100%;
+  height: 100vh;
+  min-height: 812px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
 }
 
-.job-distribution {
-  width: 80%;
+.contact-description {
+  text-align: center;
+  margin: 80px;
+}
+
+.contact-description h4 {
+  margin: 10px 0;
+}
+
+.contact-description ul {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: center;
+  margin: 40px 0;
+}
+
+.contact-description li {
+  margin: 40px;
+}
+
+.contact-description li a {
+  font-size: 5rem;
+  color: #000;
+}
+
+.contact-description li a:hover {
+  color: #C89175;
+}
+
+.email a {
+  color: #000;
+  text-underline-offset: 8px;
+}
+
+@media (min-width: 481px) {
+  .my-info a {
+    font-size: 4.5rem;
+    line-height: 4.5rem;
+  }
+}
+
+@media (min-width: 768px) {
+  .my-info a {
+    font-size: 4.5rem;
+    line-height: 4.5rem;
+  }
+
+  .about-me {
+    max-width: 450px;
+  }
+
+  .about-me h1, .about-me h2, .brief p, .brief a {
+    font-size: 1.2rem;
+  }
+
+  .title h2 {
+    font-size: 6.3rem;
+  }
+  
+  /* About */
+  .content-about {
+    height: 100%;
+    justify-content: space-evenly;
+  }
+
+  .about-description {
+    align-items: center;
+  }
+
+  .angeles-asset {
+    width: fit-content;
+  }
+
+  /* Contact */
+  .content-contact {
+    justify-content: space-evenly;
+  }
+
+  .contact-description {
+    margin: 40px;
+  }
+}
+
+@media (min-width: 1024px) {
+  /* Hero */
+
+  .content {
+    height: auto;
+    justify-content: center;
+    flex-direction: row;
+    align-items: flex-end;
+    padding: 100px;
+    margin: 80px;
+  }
+  .about-me {
+    width: 40%;
+    text-align: start;
+  }
+
+  .about-me h1, .about-me h2, .brief p, .brief a {
+    font-size: 1rem;
+  }
+
+  .about-me h2 {
+    margin: 10px 0;
+  }
+
+  .brief p {
+    margin: 0;
+    text-align: start;
+  }
+
+  .brief a {
+    text-underline-offset: 8px;
+  }
+
+  .my-info {
+    align-items: flex-start;
+  }
+
+  .my-info a {
+    font-size: 3.5rem;
+  }
+
+  .my-info a:hover {
+    font-style: italic;
+  }
+
+  /* Work */
+
+  .content-work, .about {
+    padding: 0;
+  }
+
+  .title h2 {
+    font-size: 6rem;
+  }
+
+  .crazy-stream, .moove-it-qubika, .content-about {
+    width: 90%;
+    padding: 40px;
+    margin: 50px;
+    justify-content: space-evenly;
+    flex-direction: row;
+  }
+
+  .moove-it-qubika {
+    flex-direction: row-reverse;
+  }
+
+  .content-about {
+    flex-direction: column;
+  }
+
+  .asset {
+    width: 450px;
+  }
+
+  .job-description {
+    height: 200px;
+    width: 550px;
+  }
+
+  .job-description h3, h4, p {
+    text-align: start;
+  }
+
+  /* About */
+
+  .about {
+    width: 100%;
+    height: auto;
+  }
+
+  .about-description {
+    margin: 70px;
+    flex-direction: row;
+  }
+
+  .angeles-asset {
+    width: 380px;
+    border: 30px solid #C89175;
+  }
+
+  .angeles-asset figure img {
+    width: 300px;
+    border: 40px solid #000;
+  }
+
+  .angeles-description {
+    max-width: 320px;
+  }
+
+  /* Contact */
+
+  .contact {
+    padding: 30px;
+  }
+
+  .contact-description h4, .contact-description p {
+    text-align: center;
+    font-size: 1.5rem;
+  }
+
+  .contact-description li a {
+    font-size: 6rem;
+  }
+
+  .email a:hover {
+    color: #C89175;
+  }
+}
+
+@media (min-width: 1201px) {
+  .content {
+    justify-content: space-evenly;
+    max-width: 1440px;
+  }
+
+  .my-info a {
+    font-size: 5.6rem;
+    line-height: 7.5rem;
+  }
+
+  .angeles-description {
+    max-width: 420px;
+  }
+}
+
+/* Keyframes */
+
+@keyframes transitionButton {
+  from {
+    transform: translateY(100vh);
+  }
+
+  to {
+    transform: translateX(0);
+  }
+}
+
+@keyframes textOpacity {
+  from {
+    opacity: -1;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes transitionTop {
+  from {
+    transform: translateY(-1000%);
+  }
+
+  to {
+    transform: translateX(0);
+  }
 }
 
 @keyframes transitionLeft {
@@ -230,151 +535,5 @@ h2 {
   
   to {
     transform: translateX(0);
-  }
-}
-
-@keyframes transitionButton {
-  from {
-    transform: translateY(100vw);
-  }
-
-  to {
-    transform: translateX(0);
-  }
-}
-
-@keyframes transitionPortfolio {
-  from {
-    transform: translateX(-100vh);
-  }
-  
-  to {
-    transform: translateX(0);
-  }
-}
-
-@media (min-width: 768px) {
-  .header-distribution {
-    height: 35rem;
-  }
-
-  .description h1 {
-    font-size: 2.9rem;
-  }
-
-  .description article {
-    width: 60vw;
-  }
-
-  .my-image img {
-    width: 18vw;
-  }
-
-  .my-description {
-    width: 70vw;
-    height: 30vh;
-    font-size: 1.8rem;
-  }
-
-  h2 {
-    font-size: 3rem;
-    letter-spacing: 2rem;
-  }
-
-  .logo {
-    font-size: 4rem;
-  }
-
-  .portfolio p {
-    font-size: 1.5rem;
-  }
-
-  .technologies {
-    height: 65vh;
-  }
-
-  .technology i {
-    font-size: 10rem;
-  }
-
-  h3 {
-    font-size: 4rem;
-    margin-top: 0;
-  }
-
-  .job {
-    width: 80vw;
-  }
-
-  .job-description h4 {
-    font-size: 1.5rem;
-  }
-
-  .job-description p {
-    font-size: 1.2rem;
-    width: 100%;
-  }
-
-  .work h1 {
-    font-size: 4rem;
-  }
-
-  .about-job {
-    width: 40%;
-  }
-}
-
-@media (min-width: 1024px) {
-  .main-header {
-    margin-top: 1.9rem;
-  }
-
-  .header-distribution {
-    flex-direction: row;
-  }
-
-  .description article {
-    width: 50vw;
-  }
-
-  .main-description {
-    height: 50vh;
-  }
-
-  .my-description {
-    width: 49vw;
-    height: 25vh;
-    font-size: 1.5rem;
-  }
-
-  .description article p {
-    width: 30vw;
-  }
-
-  h2 {
-    font-size: 5rem;
-    letter-spacing: 3rem;
-  }
-
-  h2:hover {
-    transform: scale(1.3);
-  }
-
-  .technologies {
-    height: 80vh;
-  }
-
-  .work {
-    margin-bottom: 5rem;
-  }
-
-  .job {
-    width: 50rem;
-    flex-direction: row;
-  }
-
-  .company-logo img {
-    width: 10rem;
-    height: 10rem;
   }
 }
