--- a/websites/style.css
+++ b/websites/style.css
@@ -1,11 +1,84 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lexend+Peta:wght@100&display=swap');
 
-h1 {
-  font-family: 'Playfair Display', serif;
-  color: #000;
+
+.section:nth-child(1) {
+  position: relative;
+}
+
+.content {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: 10;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #000;
+}
+
+.transition-down {
+  animation: transitionDown 3s;
+}
+
+.transition-up {
+  animation: transitionUp 10s;
+}
+
+@keyframes transitionDown {
+  from {
+    transform: translateY(-1000%);
+  }
+
+  to {
+    transform: translateX(0);
+  }
+}
+
+@keyframes transitionUp {
+  from {
+    transform: translateY(0);
+  }
+
+  to {
+    transform: translateY(-1000%);
+  }
+}
+
+.title {
+  display: flex;
+  flex-direction: column;
   text-align: center;
-  padding: 20px 20px;
+}
+
+h1, h2 {
+  display: inline;
+  font-family: 'Lexend Peta', sans-serif;
+  font-size: 4rem;
+  font-weight: 500;
+  color: #C89175;
+  padding: 100px 0;
+  animation: textOpacity 5s;
+  animation-delay: 3s;
+}
+
+.set-visibility {
+  visibility: hidden;
+}
+
+@keyframes textOpacity {
+  0% {
+    opacity: -1;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
+h2 {
+  font-size: 2rem;
 }
 
 a {
